editing ride-service kafka producer